# agente_siga

./: .ENV.EXAMPLE  .gitignore  main.py  pyproject.toml
src/: contracts.py  extract.py  transform.py
src/analysis/: data_loader.py  gerencial.py  inconsistencias.py  mappings.py  produtividade.py  servicos.py  utils.py
src/bot/: alerta_vencimentos.py  bot_anexo_iv.py  bot_gerencial.py  bot_inconsistencias.py  bot_ordens_servicos.py  bot_produtividade.py  bot_proximidade.py  bot_start.py  logging_utils.py  main.py
src/etl/: contracts.py  extract.py  mappings.py  transform.py
