[project]
name = "agente-n8n"
version = "0.1.0"
description = ""
authors = [
    {name = "Lenon Torma",email = "lenoncastro18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.35.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
